Conexão Com o Banco realizada
Conexão Com o Banco realizada

--- a/Teste.cfg
+++ b/Teste.cfg
@@ -36,10 +36,11 @@
 -N"C:\Temp\8.00\Dcu"
 -LE"c:\program files (x86)\borland7\borland\delphi7\Projects\Bpl"
 -LN"c:\program files (x86)\borland7\borland\delphi7\Projects\Bpl"
--U"C:\DSN\trunk\unitscompartilhadas;C:\DSN\trunk\unitscompartilhadas\geral;C:\DSN\trunk\unitscompartilhadas\estoque;C:\DSN\trunk\unitscompartilhadas\faturamento;C:\DSN\trunk\unitscompartilhadas\financeiro;C:\DSN\trunk\unitscompartilhadas\database;C:\DSN\trunk\unitscompartilhadas\template.crud;C:\DSN\trunk\unitscompartilhadas\cache"
--O"C:\DSN\trunk\unitscompartilhadas;C:\DSN\trunk\unitscompartilhadas\geral;C:\DSN\trunk\unitscompartilhadas\estoque;C:\DSN\trunk\unitscompartilhadas\faturamento;C:\DSN\trunk\unitscompartilhadas\financeiro;C:\DSN\trunk\unitscompartilhadas\database;C:\DSN\trunk\unitscompartilhadas\template.crud;C:\DSN\trunk\unitscompartilhadas\cache"
--I"C:\DSN\trunk\unitscompartilhadas;C:\DSN\trunk\unitscompartilhadas\geral;C:\DSN\trunk\unitscompartilhadas\estoque;C:\DSN\trunk\unitscompartilhadas\faturamento;C:\DSN\trunk\unitscompartilhadas\financeiro;C:\DSN\trunk\unitscompartilhadas\database;C:\DSN\trunk\unitscompartilhadas\template.crud;C:\DSN\trunk\unitscompartilhadas\cache"
--R"C:\DSN\trunk\unitscompartilhadas;C:\DSN\trunk\unitscompartilhadas\geral;C:\DSN\trunk\unitscompartilhadas\estoque;C:\DSN\trunk\unitscompartilhadas\faturamento;C:\DSN\trunk\unitscompartilhadas\financeiro;C:\DSN\trunk\unitscompartilhadas\database;C:\DSN\trunk\unitscompartilhadas\template.crud;C:\DSN\trunk\unitscompartilhadas\cache"
+-U"C:\DSN\trunk\unitscompartilhadas;C:\DSN\trunk\unitscompartilhadas\geral;C:\DSN\trunk\unitscompartilhadas\estoque;C:\DSN\trunk\unitscompartilhadas\faturamento;C:\DSN\trunk\unitscompartilhadas\financeiro;C:\DSN\trunk\unitscompartilhadas\database;C:\DSN\trunk\unitscompartilhadas\template.crud;C:\DSN\trunk\unitscompartilhadas\cache;C:\DSN\trunk\lib\altliberp_login"
+-O"C:\DSN\trunk\unitscompartilhadas;C:\DSN\trunk\unitscompartilhadas\geral;C:\DSN\trunk\unitscompartilhadas\estoque;C:\DSN\trunk\unitscompartilhadas\faturamento;C:\DSN\trunk\unitscompartilhadas\financeiro;C:\DSN\trunk\unitscompartilhadas\database;C:\DSN\trunk\unitscompartilhadas\template.crud;C:\DSN\trunk\unitscompartilhadas\cache;C:\DSN\trunk\lib\altliberp_login"
+-I"C:\DSN\trunk\unitscompartilhadas;C:\DSN\trunk\unitscompartilhadas\geral;C:\DSN\trunk\unitscompartilhadas\estoque;C:\DSN\trunk\unitscompartilhadas\faturamento;C:\DSN\trunk\unitscompartilhadas\financeiro;C:\DSN\trunk\unitscompartilhadas\database;C:\DSN\trunk\unitscompartilhadas\template.crud;C:\DSN\trunk\unitscompartilhadas\cache;C:\DSN\trunk\lib\altliberp_login"
+-R"C:\DSN\trunk\unitscompartilhadas;C:\DSN\trunk\unitscompartilhadas\geral;C:\DSN\trunk\unitscompartilhadas\estoque;C:\DSN\trunk\unitscompartilhadas\faturamento;C:\DSN\trunk\unitscompartilhadas\financeiro;C:\DSN\trunk\unitscompartilhadas\database;C:\DSN\trunk\unitscompartilhadas\template.crud;C:\DSN\trunk\unitscompartilhadas\cache;C:\DSN\trunk\lib\altliberp_login"
+-DEUREKALOG;EUREKALOG_VER6
 -w-SYMBOL_PLATFORM
 -w-UNIT_PLATFORM
 -w-UNSAFE_TYPE
